[package]
name = "rusty-hocon"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde"]
serde = [ "dep:serde" ]

[dependencies]
thiserror = "2.0.3"
nom = "8.0.0"
nom-language = "0.1.0"
serde = { version = "1.0.204", optional = true }

[dev-dependencies]
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
